# ferrous-kernel

./: .gitignore  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/: CODEOWNERS  labels.json  milestones.json  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: adr-proposal.md  bug-report.md  config.yml  feature-request.md  task.md
.github/workflows/: bootloader.yml  ci.yml  setup-labels-milestones.yml
boot/: Cargo.toml
boot/.cargo/: config.toml
boot/src/: boot_info.rs  console.rs  main.rs  memory.rs
docs/: ARCHITECTURE.md  BOOT_ARCHITECTURE.md  CAPABILITY_SYSTEM.md  CHARTER.md  CODING_STANDARDS.md  CONTRIBUTING.md  IPC_ARCHITECTURE.md  MEMORY_ARCHITECTURE.md  QEMU_TESTING.md  ROADMAP.md  SETUP.md  UNSAFE_GUIDELINES.md
docs/adr/: ADR-0001-kernel-entry-point-handoff.md  README.md  template.md
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: entry.rs  gdt.rs  idt.rs  mod.rs  stack.rs
kernel/src/drivers/: mod.rs  serial.rs
kernel/src/memory/: mod.rs
lib/alloc/: Cargo.toml
lib/alloc/src/: lib.rs
lib/boot-info/: Cargo.toml
lib/boot-info/src/: lib.rs
lib/core/: Cargo.toml
lib/core/src/: lib.rs
scripts/: build.sh  run-qemu.sh  verify-boot.sh
tests/: README.md  boot_tests.rs
